Splash screen et home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">RookieAgent</string>
+    <string name="start">Commencer</string>
+    <string name="exit">Quitter</string>
+    <string name="option">Option</string>
+    <string name="logo_desc">Logo de l\'application</string>
 </resources>
