Modification du system de son + modif IHM jeu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Homme -->
     <string name="app_name">RookieAgent</string>
     <string name="start">Commencer</string>
@@ -6,7 +6,7 @@
     <string name="option">Option</string>
     <string name="logo_desc">Logo de l\'application</string>
     <string name="exit_message">Voulez vous vraiment quitter ? Votre partie n\'a pas été sauvegardé</string>
-    <string name="ok">ok</string>
+    <string name="ok">OK</string>
     <string name="cancel">Annulé</string>
 
     <!-- Map -->
@@ -14,7 +14,7 @@
     <!-- Jeu -->
     <string name="jeu_name">Jeu</string>
     <string name="perso_desc">Personnage</string>
-    <string name="map_part_desc">partie de la map correspondant a l\'endroit choisi</string>
+    <string name="map_part_desc" tools:ignore="Typos">partie de la map correspondant a l\'endroit choisi</string>
     <string name="police_name">Rookie</string>
     <string name="police_desc">Description de votre personage</string>
     <string name="localisation">Localisation</string>
@@ -24,4 +24,7 @@
     <string name="hopital">hopital</string>
     <string name="plage">plage</string>
     <string name="port">port</string>
+    <string name="sons">Sons</string>
+    <string name="icon_sons">icon sons</string>
+    <string name="icon_volume">icon volume</string>
 </resources>
